--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -13,6 +13,9 @@
     <label for="lastname">Enter Lastname: </label>
     <input type="text" th:field="*{lastname}" id="lastname">
     <br/>
+    <label for="password">Enter Password: </label>
+    <input type="text" th:field="*{password}" id="password">
+    <br/>
     <input type="submit" value="Update">
 </body>
 </html>
