--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,34 +1,256 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Users</title>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/css/style.css}"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Admin</title>
 </head>
 <body>
-<h1>Users</h1>
-<div>
-    <table border="1">
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Lastname</th>
-        </tr>
-        <tr th:each="user: ${users}">
-            <td th:utext="${user.getId()}"></td>
-            <td th:utext="${user.getUsername()}"></td>
-            <td th:utext="${user.getLastname()}"></td>
-            <td><a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a></td>
-            <td><form th:method="DELETE" th:action="@{/{id}/delete(id=${user.getId()})}">
-                <input type="submit" value="Delete">
-            </form></td>
-        </tr>
-    </table>
-    <br/>
-    <a href="/new">Create new user</a>
-    <br/>
-    <button class="buttonLogout" onclick="window.location.href = '/logout';">Logout</button>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <p class="navbar-brand text-white">
+            <b th:object="${userNav}"><span class="align-middle" th:text="${userNav.getUsername()}"></span></b>
+            <span class="align-middle">with roles:</span>
+            <span class="align-middle" th:text="${userNav.getRoles()}"></span>
+        </p>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-dark text-secondary">Logout</button>
+        </form>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 p-0">
+            <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                <a class="nav-item nav-link" th:href="@{/user}">User</a>
+            </div>
+        </div>
+        <div class="col-10 px-0" style="background-color: whitesmoke">
+            <div class="container-fluid">
+                <h2 class="m-3 fw-bold">Admin panel</h2>
+                <div class="tab-content" id="tabContent">
+                    <ul class="nav nav-tabs">
+                        <a class="nav-link active" data-toggle="tab">Users Table</a>
+                        <a class="nav-link"  th:href="@{/new}">New User</a>
+                    </ul>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="m-1">
+                                <h5>All users</h5>
+                            </div>
+                        </div>
+
+                        <div class="card-body" bg-primary text-white>
+                            <table class="table table-striped table-hover">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                <tr th:each="user : ${users}">
+                                    <td th:text="${user.getId()}">id</td>
+                                    <td th:text="${user.getUsername()}">name</td>
+                                    <td th:text="${user.getLastname()}">lastname</td>
+                                    <td th:text="${user.getRoles()}">roles</td>
+
+                                    <!--  Edit-->
+                                    <td>
+                                        <button type="button" class="btn btn-info" data-toggle="modal"
+                                                th:data-target="${'#edit' + user.id}">Edit
+                                        </button>
+
+                                        <div class="modal" th:id="${'edit' + user.id}">
+                                            <div class="modal-dialog" >
+                                                <div class="modal-content">
+                                                    <form th:action="@{/admin/{id}(id=${user.id})}"
+                                                          th:object="${user}" th:method="PATCH">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">Edit user</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true"><h3>x</h3></span>
+                                                            </button>
+                                                        </div>
+
+                                                        <div class="modal-body">
+                                                            <div class="form-group row justify-content-center text-center">
+                                                                <div class="col-sm-6">
+                                                            <div class="form-group">
+                                                                <label for="id" class="col-form-label"><strong>ID</strong></label>
+                                                                <input
+                                                                        type="number"
+                                                                        class="form-control"
+                                                                        th:value="${user.id}"
+                                                                        id="id"
+                                                                        name="id"
+                                                                        readonly>
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="username" class="col-form-label"><strong>Name</strong></label>
+                                                                <input type="text"
+                                                                       class="form-control"
+                                                                       name="username"
+                                                                       th:value="${user.username}"
+                                                                       id="username">
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="lastname" class="col-form-label"><strong>Last name</strong></label>
+                                                                <input type="text"
+                                                                       class="form-control"
+                                                                       name="lastname"
+                                                                       th:value="${user.lastname}"
+                                                                       id="lastname">
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="password" class="col-form-label"><strong>Password</strong></label>
+                                                                <input type="password"
+                                                                       class="form-control"
+                                                                       th:value="${user.password}"
+                                                                       name="password"
+                                                                       id="password">
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="role"><strong>Role</strong></label>
+                                                                <select multiple class="custom-select w-100"
+                                                                        size="2"
+                                                                        id="role" name="role">
+                                                                    <option
+                                                                            th:each="role : ${roles}"
+
+                                                                            th:value="${role.role}"
+                                                                            th:text="${role.getRole()}"
+                                                                            th:selected="${user.setRoles(roles)}">
+                                                                    </option>
+                                                                </select>
+                                                            </div>
+                                                            <br/>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                                            </button>
+                                                            <input type="submit" class="btn btn-primary" value="Edit"/>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+
+
+                                    <!-- DELETE -->
+
+                                    <td>
+                                        <button type="button" class="btn btn-danger" data-toggle="modal"
+                                                th:data-target="${'#delete' + user.id}">Delete
+                                        </button>
+                                        <div class="modal" th:id="${'delete' + user.id}">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <form th:action="@{/{id}/delete(id=${user.id})}"
+                                                          th:object="${user}" th:method="delete">
+
+                                                        <div class="modal-header">
+                                                            <h4 class="modal-title">Delete user</h4>
+                                                            <button type="button" class="close" data-dismiss="modal">x
+                                                            </button>
+                                                        </div>
+
+                                                        <div class="modal-body">
+                                                            <div class="form-group row justify-content-center text-center">
+                                                                <div class="col-sm-6">
+
+                                                                    <label for="dId"><strong>ID</strong></label>
+                                                                    <br/>
+                                                                    <input type="number"
+                                                                           class="form-control"
+                                                                           th:value="${user.id}"
+                                                                           id="dId"
+                                                                           name="id"
+                                                                           readonly>
+
+                                                                    <br/>
+                                                                    <label for="dFirstname"><strong>Name</strong></label>
+
+                                                                    <br/>
+                                                                    <input type="text"
+                                                                           class="form-control"
+                                                                           th:value="${user.username}"
+                                                                           id="dFirstname"
+                                                                           name="name"
+                                                                           readonly>
+
+                                                                    <br/>
+                                                                    <label for="dLastname"><strong>Last name</strong></label>
+
+                                                                    <br/>
+                                                                    <input type="text"
+                                                                           class="form-control"
+                                                                           th:value="${user.lastname}"
+                                                                           id="dLastname"
+                                                                           name="car"
+                                                                           readonly>
+
+                                                                    <br/>
+
+                                                                    <br/>
+                                                                    <label for="dRole"><strong>Role</strong></label>
+                                                                    <select multiple class="form-control w-100"
+                                                                            size="2"
+                                                                            id="dRole"
+                                                                            name="roles"
+                                                                            readonly>
+                                                                        <option
+                                                                                th:each="role : ${user.roles}"
+                                                                                th:text="${role.getRole()}">
+                                                                        </option>
+                                                                    </select>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                                            </button>
+                                                            <input type="submit" class="btn btn-danger"
+                                                                   value="Delete"/>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                </tr>
+
+                            </table>
+                        </div>
+                    </div>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
