--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,27 +1,70 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      lang="en">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>User</title>
-    <meta charset="UTF-8">
-    <title>Users</title>
-    <link rel="stylesheet" type="text/css"
-          th:href="@{/css/style.css}"/>
 </head>
 <body>
-<h1>User data</h1>
-<table border="1">
-    <tr>
-        <th>ID</th>
-        <th>Имя</th>
-        <th>Фамилия</th>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <p class="navbar-brand text-white">
+            <b th:object="${user}"><span class="align-middle" th:text="${user.getUsername()}"></span></b>
+            <span class="align-middle">with roles:</span>
+            <span class="align-middle" th:text="${user.getRoles()}"></span>
+        </p>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-dark text-secondary">Logout</button>
+        </form>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2 p-0">
+            <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <div sec:authorize="hasAuthority('ROLE_ADMIN')">
+                    <a class="nav-item nav-link" th:href="@{/admin}">Admin</a>
+                </div>
+                <a class="nav-link active" aria-controls="v-pills-home" aria-selected="true">User</a>
+            </div>
+        </div>
+        <div class="col-10 px-0" style="background-color: whitesmoke">
+            <div class="container-fluid">
+                <h2 class="m-3 fw-bold">User information-page</h2>
+                <div class="tab-content" id="tabContent">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="m-1">
+                                <h5>About user</h5>
+                            </div>
+                        </div>
 
-    </tr>
-    <td th:text="${user.getId()}">ID</td>
-    <td th:utext="${user.getUsername}">Имя</a></td>
-    <td th:utext="${user.getLastname()}">Фамилия</td>
-</table>
-<br>
-<button class="buttonLogout" onclick="window.location.href = '/logout';">Logout</button>
+                        <div class="card-body" bg-primary text-white>
+                            <table class="table table-striped table-hover">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Role</th>
+                                </tr>
+                                <tr th:each="user : ${user}">
+                                    <td th:text="${user.id}">id</td>
+                                    <td th:text="${user.username}">name</td>
+                                    <td th:text="${user.lastname}">lastname</td>
+                                    <td th:text="${user.getRoles}">roles</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
